--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -40,7 +40,7 @@
   },
   "servicesSection": {
     "badge": "Услуги",
-    "description": "В FixFlow мы гордимся тем, что предоставляем высококачественные сантехнические услуги, которые поддерживают бесперебойную работу вашего дома или бизнеса.",
+    "description": "Предоставление вам стратегических и эффективных юридических решений",
     "cards": [
       {
         "title": "Разработка программного обеспечения",
