--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -40,7 +40,7 @@
   },
   "servicesSection": {
     "badge": "Xizmatlar",
-    "description": "FixFlow kompaniyasida biz uyingiz yoki biznesingiz barqaror ishlashi uchun yuqori sifatli santexnika xizmatlarini taqdim etishdan faxrlanamiz.",
+    "description": "Siz uchun strategik va samarali huquqiy yechimlarni taqdim etish",
     "cards": [
       {
         "title": "Dasturiy ta'minot ishlab chiqish",
