--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -106,8 +106,8 @@
     "description": "Our commitment to excellence is validated by industry-leading certifications and partnerships",
     "cards": [
       {
-        "title": "AWS Advanced Partner",
-        "subtitle": "Amazon Web Services",
+        "title": "<<TENZOR SOFT>> PE",
+        "subtitle": " IT PRAK",
         "focus": "Cloud Solutions Architecture",
         "status": "Verified",
         "year": "2023"
