--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -102,8 +102,8 @@
     "description": "Наша приверженность совершенству подтверждена ведущими отраслевыми сертификатами и партнерствами",
     "cards": [
       {
-        "title": "AWS Advanced Partner",
-        "subtitle": "Amazon Web Services",
+        "title": "<<TENZOR SOFT>> PE",
+        "subtitle": "IT PARK",
         "focus": "Архитектура облачных решений",
         "status": "Подтверждено",
         "year": "2023"
