--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -102,8 +102,8 @@
     "description": "Mukammallikka bo'lgan sadoqatimiz yetakchi sertifikatlar va hamkorliklar bilan tasdiqlangan",
     "cards": [
       {
-        "title": "AWS Advanced Partner",
-        "subtitle": "Amazon Web Services",
+        "title": "<<TENZOR SOFT>> PE",
+        "subtitle": "IT PARK",
         "focus": "Bulutli yechimlar arxitekturasi",
         "status": "Tasdiqlangan",
         "year": "2023"
