--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -105,7 +105,7 @@
 
   "cards": [
     {
-      "title": "<<TENZOR SOFT>> PE",
+      "title": "TENZOR SOFT",
       "subtitle": "IT PARK",
       "focus": "Bulutli yechimlar arxitekturasi",
       "status": "Tasdiqlangan",
