--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -91,8 +91,8 @@
         "body": "Отслеживайте грузовики в режиме реального времени и упрощайте процесс доставки."
       },
       {
-        "title": "LogistX",
-        "body": "Познакомьтесь с нашими самыми опытными и надежными водителями, готовыми обработать ваши грузы."
+        "title": "XMed",
+        "body": "XMed – система онлайн-приёма врачей, с помощью которой вы можете получить медицинскую консультацию, не выходя из дома."
       }
     ]
   },
@@ -184,21 +184,18 @@
   },
 
   "faq": {
-    "items": [
-      {
+      "item1":{
         "question": "Шаблон",
-        "answers": {
           "home": "Главная",
           "about": "О нас",
           "services": "Услуги",
           "portfolio": "Портфолио",
           "certificates": "Сертификаты",
           "contact": "Контакты"
-        }
-      },
-      {
+       
+       },
+      "item2":{
         "question": "Услуги",
-        "answers": {
           "software": "Разработка программного обеспечения",
           "1cProduction": "1C Производство",
           "bitrix": "1С Битрикс",
@@ -206,16 +203,13 @@
           "automation": "Автоматизация",
           "biometric": "Биометрические системы",
           "itservices": "IT Услуги"
-        }
-      },
-      {
+        
+       },
+     "item3":{
         "question": "Контакты",
-        "answers": {
           "address": "г. Ташкент, Мирободский район, ул. Махтумкули",
           "phone": "+998 95 460 10 10",
           "email": "info@tenzorsoft.com"
-        }
       }
-    ]
   }
 }
