--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -91,8 +91,8 @@
         "body": "Yuk mashinalarini real vaqt rejimida kuzating va yetkazib berishni soddalashtiring."
       },
       {
-        "title": "LogistX",
-        "body": "Yuklaringizni qayta ishlashga tayyor eng tajribali va ishonchli haydovchilarimiz bilan tanishing."
+        "title": "XMed",
+        "body": "XMed – uyingizdan chiqmasdan tibbiy maslahat oladigan, onlayn shifokor qabul tizimi."
       }
     ]
   },
