--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -12,7 +12,7 @@
     "title": "Надёжная юридическая экспертиза, адаптированная под ваши потребности.",
     "description": "Наши преданные своему делу юристы предоставляют стратегические юридические решения и надёжное представительство для физических лиц.",
     "cta": "Подробнее",
-    "clients": "Обслуженные клиенты",
+    "clients": "Клиенты",
     "uptime": "Аптайм",
     "support": "Поддержка"
   },
