--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -12,9 +12,9 @@
     "title": "Sizning ehtiyojlaringizga moslashtirilgan ishonchli yuridik ekspertiza.",
     "description": "Bizning sodiq advokatlarimiz shaxslar uchun strategik yuridik yechimlar va qat’iy himoya taqdim etadi.",
     "cta": "Batafsil o'qish",
-    "clients": "Xizmat ko‘rsatilgan mijozlar",
+    "clients": "Mijozlar",
     "uptime": "Ishlash vaqti",
-    "support": "Qo‘llab-quvvatlash"
+    "support": "Yordam"
   },
   "aboutSection": {
     "badge": "Biz haqimizda",
