--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -22,23 +22,23 @@
     "title": "We Create Bunch Of Enthusiastic & Creative Minds",
     "subtitle": "Tenzor Soft LLC is a leading software developer in Uzbekistan, operating in the IT services market since 2008. For over 15 years, we have been delivering reliable digital solutions.",
     "whyTitle": "Why Choose Us?",
-    "whyDescription": "With over 15 years of experience  in the IT industry, we've established <0/> ourselves as a trusted partner for businesses seeking innovative solutions. <0/> Our team of experts brings together diverse skills and perspectives to tackle <0/> even the most complex challenges.",
+    "whyDescription": "With over 15 years of experience  in the IT industry, we've established ourselves as a trusted partner for businesses seeking innovative solutions. Our team of experts brings together diverse skills and perspectives to tackle even the most complex challenges.",
     "features": [
       {
         "title": "Effective project  management",
         "body": "Full support of projects using modern methodologies and proven practices."
       },
       {
-        "title": "Cross-platform and  <br /> responsive design",
-        "body": "We create designs that look  <br />  flawless on any device."
+        "title": "Cross-platform and   responsive design",
+        "body": "We create designs that look  flawless on any device."
       },
       {
-        "title": "Monitoring and time  <br />  tracking",
-        "body": "Accurate solutions for time  <br />  tracking and productivity improvement."
+        "title": "Monitoring and time  tracking",
+        "body": "Accurate solutions for time   tracking and productivity improvement."
       },
       {
-        "title": "Creating innovative  <br />  mobile applications",
-        "body": "We develop custom mobile  <br /> solutions that stand out in the market."
+        "title": "Creating innovative mobile applications",
+        "body": "We develop custom mobile solutions that stand out in the market."
       }
     ]
   },
